--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
     <link rel="stylesheet" href="./dist/css/style.css">
 </head>
 <body>
-    
+    <div class="sticky top-0 px-36 bg-[#0E1E36] flex items-center justify-between shadow">
+        <div class="flex items-center">
+            <span class="text-white mr-4 text-[15px]">
+                Follow On:
+            </span>
+            <ul class="flex items-center">
+                <li class="text-white bg-transparent px-6 py-3 border-l border-r border-gray-500 cursor-pointer hover:bg-[#EF0548] duration-300">
+                    <span>f</span>
+                </li>
+                <li class="text-white bg-transparent px-6 py-3 border-r border-gray-500 cursor-pointer hover:bg-[#EF0548] duration-300">
+                    <span>t</span>
+                </li>
+                <li class="text-white bg-transparent px-6 py-3 border-r border-gray-500 cursor-pointer hover:bg-[#EF0548] duration-300">
+                    <span>i</span>
+                </li>
+                <li class="text-white bg-transparent px-6 py-3 border-r border-gray-500 cursor-pointer hover:bg-[#EF0548] duration-300">
+                    <span>l</span>
+                </li>
+            </ul>
+        </div>
+        <ul class="flex items-center">
+            <li class="text-white px-6 border-r border-gray-500">(+212)-226-3126</li>
+            <li class="text-white px-6 border-r border-gray-500 cursor-pointer hover:text-[#EF0548] duration-300">consulter@example.com</li>
+            <li class="text-white px-6">Mon – Fri: 8.00 – 18.00</li>
+        </ul>
+    </div>
 </body>
 </html>
