--- a/index.html
+++ b/index.html
@@ -34,5 +34,16 @@
             <li class="text-white px-6">Mon – Fri: 8.00 – 18.00</li>
         </ul>
     </div>
+    <nav class="sticky top-12 px-36 flex items-center justify-between">
+        <img src="./assets/logo.png" alt="logo website">
+        <ul class="flex items-center">
+            <li class="py-8 px-6 hover:text-[#EF0548] duration-300 cursor-pointer">Home</li>
+            <li class="py-8 px-6 hover:text-[#EF0548] duration-300 cursor-pointer">Our Services</li>
+            <li class="py-8 px-6 hover:text-[#EF0548] duration-300 cursor-pointer">Pages</li>
+            <li class="py-8 px-6 hover:text-[#EF0548] duration-300 cursor-pointer">Portfolio</li>
+            <li class="py-8 px-6 hover:text-[#EF0548] duration-300 cursor-pointer">Blog</li>
+        </ul>
+        <button class="bg-[#EF0548] py-4 px-8 font-bold text-white rounded-sm">Get A Quote</button>
+    </nav>
 </body>
 </html>
