--- a/index.html
+++ b/index.html
@@ -45,5 +45,8 @@
         </ul>
         <button class="bg-[#EF0548] py-4 px-8 font-bold text-white rounded-sm">Get A Quote</button>
     </nav>
+    <header class="h-[795px] bg-[#0E1E36]">
+
+    </header>
 </body>
 </html>
